==> js216/stm32mp135-bootloader/drivers/stm32mp13xx_hal_pwr_ex.c <==
#include "stm32mp13xx_hal.h"
#include "stm32mp13xx_hal_conf.h"
#include <stdint.h>
#define AVD_MODE_IT             ((uint32_t)0x00010000U)
#define AVD_MODE_EVT            ((uint32_t)0x00020000U)
#define AVD_RISING_EDGE         ((uint32_t)0x00000001U)
#define AVD_FALLING_EDGE        ((uint32_t)0x00000002U)
#define AVD_RISING_FALLING_EDGE ((uint32_t)0x00000003U)
#define PWR_FLAG_SETTING_DELAY_US ((uint32_t)1000U)

HAL_StatusTypeDef HAL_PWREx_EnableBkUpReg(void)
{
   uint32_t tickstart;

   /* Enable Backup regulator */
   SET_BIT(PWR->CR2, PWR_CR2_BREN);

   /* Get tick */
   tickstart = HAL_GetTick();

   /* Wait till Backup regulator ready flag is set */
   while (__HAL_PWR_GET_FLAG(PWR_FLAG_BRR) == 0U) {
      if ((HAL_GetTick() - tickstart) > PWR_FLAG_SETTING_DELAY_US) {
         return HAL_TIMEOUT;
      }
   }

   return HAL_OK;
}

HAL_StatusTypeDef HAL_PWREx_DisableBkUpReg(void)
{
   uint32_t tickstart;

   /* Disable Backup regulator */
   CLEAR_BIT(PWR->CR2, PWR_CR2_BREN);

   /* Get tick */
   tickstart = HAL_GetTick();

   /* Wait till Backup regulator ready flag is reset */
   while (__HAL_PWR_GET_FLAG(PWR_FLAG_BRR) != 0U) {
      if ((HAL_GetTick() - tickstart) > PWR_FLAG_SETTING_DELAY_US) {
         return HAL_TIMEOUT;
      }
   }
   return HAL_OK;
}

HAL_StatusTypeDef HAL_PWREx_EnableUSBVoltageDetector(void)
{
   uint32_t tickstart;

   /* Enable the USB voltage detector */
   SET_BIT(PWR->CR3, PWR_CR3_USB33DEN);

   /* Get tick */
   tickstart = HAL_GetTick();

   /* Wait until USB33 regulator ready flag is set */
   while (__HAL_PWR_GET_FLAG(PWR_FLAG_USB) == 0U) {
      if ((HAL_GetTick() - tickstart) > PWR_FLAG_SETTING_DELAY_US) {
         return HAL_TIMEOUT;
      }
   }
   return HAL_OK;
}

HAL_StatusTypeDef HAL_PWREx_DisableUSBVoltageDetector(void)
{
   uint32_t tickstart;

   /* Disable the USB voltage detector */
   CLEAR_BIT(PWR->CR3, PWR_CR3_USB33DEN);

   /* Get tick */
   tickstart = HAL_GetTick();

   /* Wait until USB33 regulator ready flag is reset */
   while (__HAL_PWR_GET_FLAG(PWR_FLAG_USB) != 0U) {
      if ((HAL_GetTick() - tickstart) > PWR_FLAG_SETTING_DELAY_US) {
         return HAL_TIMEOUT;
      }
   }
   return HAL_OK;
}

void HAL_PWREx_EnableBatteryCharging(uint32_t ResistorValue)
{
   assert_param(IS_PWR_BATTERY_RESISTOR_SELECT(ResistorValue));

   /* Specify the charging resistor */
   MODIFY_REG(PWR->CR3, PWR_CR3_VBRS, ResistorValue);

   /* Enable the Battery charging */
   SET_BIT(PWR->CR3, PWR_CR3_VBE);
}

void HAL_PWREx_DisableBatteryCharging(void)
{
   /* Disable the Battery charging */
   CLEAR_BIT(PWR->CR3, PWR_CR3_VBE);
}

void HAL_PWREx_EnableMonitoring(void)
{
   /* Enable the VBAT and Temperature monitoring */
   SET_BIT(PWR->CR2, PWR_CR2_MONEN);
}

void HAL_PWREx_DisableMonitoring(void)
{
   /* Disable the VBAT and Temperature monitoring */
   CLEAR_BIT(PWR->CR2, PWR_CR2_MONEN);
}

uint32_t HAL_PWREx_GetTemperatureLevel(void)
{
   uint32_t tempLevel;
   uint32_t regValue;

   /* Read the temperature flags */
   regValue = PWR->CR2 & (PWR_CR2_TEMPH | PWR_CR2_TEMPL);

   /* Compare the read value to the temperature threshold */
   if (regValue == PWR_CR2_TEMPL) {
      tempLevel = PWR_TEMP_BELOW_LOW_THRESHOLD;
   } else if (regValue == PWR_CR2_TEMPH) {
      tempLevel = PWR_TEMP_ABOVE_HIGH_THRESHOLD;
   } else {
      tempLevel = PWR_TEMP_BETWEEN_HIGH_LOW_THRESHOLD;
   }

   return tempLevel;
}

uint32_t HAL_PWREx_GetVBATLevel(void)
{
   uint32_t VBATLevel;
   uint32_t regValue;

   /* Read the VBAT flags */
   regValue = PWR->CR2 & (PWR_CR2_VBATH | PWR_CR2_VBATL);

   /* Compare the read value to the VBAT threshold */
   if (regValue == PWR_CR2_VBATL) {
      VBATLevel = PWR_VBAT_BELOW_LOW_THRESHOLD;
   } else if (regValue == PWR_CR2_VBATH) {
      VBATLevel = PWR_VBAT_ABOVE_HIGH_THRESHOLD;
   } else {
      VBATLevel = PWR_VBAT_BETWEEN_HIGH_LOW_THRESHOLD;
   }

   return VBATLevel;
}

void HAL_PWREx_ConfigAVD(const PWREx_AVDTypeDef *sConfigAVD)
{
   /* Check the parameters */
   assert_param(IS_PWR_AVD_LEVEL(sConfigAVD->AVDLevel));
   assert_param(IS_PWR_AVD_MODE(sConfigAVD->Mode));

   /* Set the ALS[18:17] bits according to AVDLevel value */
   MODIFY_REG(PWR->CR1, PWR_CR1_ALS, sConfigAVD->AVDLevel);

   /* Clear any previous config. Keep it clear if no IT mode is selected */
   __HAL_PWR_PVD_AVD_EXTI_DISABLE_IT();
   __HAL_PWR_PVD_AVD_EXTI_DISABLE_RISING_EDGE();
   __HAL_PWR_PVD_AVD_EXTI_DISABLE_FALLING_EDGE();

   /* Configure the interrupt mode */
   if (AVD_MODE_IT == (sConfigAVD->Mode & AVD_MODE_IT)) {
      __HAL_PWR_PVD_AVD_EXTI_ENABLE_IT();
   }

   /* Configure the edge */
   if (AVD_RISING_EDGE == (sConfigAVD->Mode & AVD_RISING_EDGE)) {
      __HAL_PWR_PVD_AVD_EXTI_ENABLE_RISING_EDGE();
   }

   if (AVD_FALLING_EDGE == (sConfigAVD->Mode & AVD_FALLING_EDGE)) {
      __HAL_PWR_PVD_AVD_EXTI_ENABLE_FALLING_EDGE();
   }
}

void HAL_PWREx_PVD_AVD_IRQHandler(void)
{
   /* PVD EXTI line interrupt detected */
   if (READ_BIT(PWR->CR1, PWR_CR1_PVDEN) != 0U) {
      /* PWR PVD interrupt user callback */
      HAL_PWR_PVDCallback();
   }

   /* AVD EXTI line interrupt detected */
   if (READ_BIT(PWR->CR1, PWR_CR1_AVDEN) != 0U) {
      /* PWR AVD interrupt user callback */
      HAL_PWREx_AVDCallback();
   }

   /* Clear PWR PVD AVD EXTI pending bit */
   __HAL_PWR_PVD_AVD_EXTI_CLEAR_FLAG();
}

void HAL_PWREx_WAKEUP_PIN_IRQHandler(void)
{

   /* Wakeup pin EXTI line interrupt detected */
   if (READ_BIT(PWR->WKUPFR, PWR_WKUPFR_WKUPF1) != 0U) {
      /* Clear PWR WKUPF1 flag */
      SET_BIT(PWR->WKUPCR, PWR_WKUPCR_WKUPC1);

      /* PWR WKUP1 interrupt user callback */
      HAL_PWREx_WKUP1_Callback();
   }

   if (READ_BIT(PWR->WKUPFR, PWR_WKUPFR_WKUPF2) != 0U) {
      /* Clear PWR WKUPF2 flag */
      SET_BIT(PWR->WKUPCR, PWR_WKUPCR_WKUPC2);

      /* PWR WKUP2 interrupt user callback */
      HAL_PWREx_WKUP2_Callback();
   }

   if (READ_BIT(PWR->WKUPFR, PWR_WKUPFR_WKUPF3) != 0U) {
      /* Clear PWR WKUPF3 flag */
      SET_BIT(PWR->WKUPCR, PWR_WKUPCR_WKUPC3);

      /* PWR WKUP3 interrupt user callback */
      HAL_PWREx_WKUP3_Callback();
   }

   if (READ_BIT(PWR->WKUPFR, PWR_WKUPFR_WKUPF4) != 0U) {
      /* Clear PWR WKUPF4 flag */
      SET_BIT(PWR->WKUPCR, PWR_WKUPCR_WKUPC4);

      /* PWR WKUP4 interrupt user callback */
      HAL_PWREx_WKUP4_Callback();
   }

   if (READ_BIT(PWR->WKUPFR, PWR_WKUPFR_WKUPF5) != 0U) {
      /* Clear PWR WKUPF5 flag */
      SET_BIT(PWR->WKUPCR, PWR_WKUPCR_WKUPC5);

      /* PWR WKUP5 interrupt user callback */
      HAL_PWREx_WKUP5_Callback();
   }

   if (READ_BIT(PWR->WKUPFR, PWR_WKUPFR_WKUPF6) != 0U) {
      /* Clear PWR WKUPF6 flag */
      SET_BIT(PWR->WKUPCR, PWR_WKUPCR_WKUPC6);

      /* PWR WKUP6 interrupt user callback */
      HAL_PWREx_WKUP6_Callback();
   }
}
